# procedural

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindGLFW.cmake
examples/blur/: blur.glsl-project  blur_x.frag  blur_y.frag  image.frag  settings.frag
examples/blur_darkness/: blur_darkness.glsl-project  blur_x.frag  blur_xd.frag  blur_y.frag  blur_yd.frag  color_range.frag  dilate.frag  main.frag
examples/earth/: earth.glsl-project  main.frag  settings.frag
examples/gravity/: gravity.glsl-project  main.frag  settings.frag
examples/mandelbrot/: main.frag  mandelbrot.glsl-project
examples/rain/: blur_x.frag  blur_y.frag  main.frag  rain.glsl-project
examples/resources/: download_textures.py
examples/sphere/: main.frag  main.glsl  settings.frag  sphere.glsl-project
source/: CMakeLists.txt  Config.cpp  Config.h  Drawable.cpp  Drawable.h  FileWatcher.cpp  Framebuffer.cpp  Framebuffer.h  Group.h  PhotoRenderer.cpp  PhotoRenderer.h  ProceduralRenderer.cpp  ProceduralRenderer.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  ScreenAlignedQuad.cpp  ScreenAlignedQuad.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Window.cpp  Window.h  convert.cpp  convert.h  main.cpp  util.cpp  util.h  util_convert.cpp
source/shader/: chess.glsl  gradient.glsl  lighting.glsl  procedural.frag  screenalignedquad.vert  simple.frag  simple.vert  util.glsl
test/: concat_shader.py
viewer/: CMakeLists.txt  Config.cpp  Config.h  Drawable.cpp  Drawable.h  FileWatcher.cpp  FileWatcher.h  Framebuffer.cpp  Framebuffer.h  ProceduralRenderer.cpp  ProceduralRenderer.h  Program.cpp  Program.h  Project.cpp  Project.h  Renderer.cpp  Renderer.h  ScreenAlignedQuad.cpp  ScreenAlignedQuad.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp  util.cpp  util.h  util_convert.cpp  util_yaml.cpp
viewer/shader/: default.frag  procedural.frag  screenalignedquad.vert
